--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
 /*-----------------------------------------------------------------------------------
-    
+
     CSS INDEX
     ===================
-  
+
     1. Header Area
     2. Slider Area
     3. About Area
@@ -44,10 +44,11 @@
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0;
-    padding: 35px 17px;
+    padding: 28px 20px;
     position: relative;
+    text-align: left;
 }
-
+/*kijkennaardit*/
 .main-menu nav ul li a:before{
     content: '';
     position: absolute;
@@ -94,6 +95,12 @@
 }
 
 /*dropdown start*/
+
+/*.dropdown-move {*/
+    /*margin: 0px 0px 0px 100px;*/
+    /*padding: 0px;*/
+/*}*/
+
 .dropdown {
     position: relative;
     display: inline-block;
@@ -103,9 +110,9 @@
     display: none;
     position: absolute;
     background-color: #202020;
-    min-width: 160px;
+    min-width: 0px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
+    /*padding: 12px 16px;*/
     z-index: 1;
     text-align:left;
 }
@@ -115,18 +122,89 @@
 }
 
 
+.dropdown-menu {
+    min-width: 0px!important;
+}
+
 .dropdown-submenu {
     position: relative;
+    clear: both;
+    Float: left;
+    padding-right: 40px;
 }
 
-.dropdown-submenu .dropdown-menu {
+.dropdown-submenu>.dropdown-menu {
     top: 0;
     left: 100%;
-    margin-top: -1px;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
+
+.open>.dropdown-menu {
+    background-color: #202020;
+    margin: 0px 0px 0px 500px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    background-color: #202020;
+}
+
+.dropdown-menu multi-level li ul nav a {
+    padding: 0px 0px;!important;
+}
+
+li a ul .dropdown-menu {
+    padding: 0px 0px;
+}
+
+.dropdown-toggle li ul nav a {
+    padding: 0px 0px;!important;
+}
+
+.dropdown-submenu li ul nav a {
+    padding: 0px 0px;!important;
 }
 
 
-/*knopjes*/
+/*dondoneind*/
+/*buttons*/
 .btn-round-lg{
     border-radius: 22.5px;
 }
@@ -153,7 +231,7 @@ btn btn-primary btn-round-lg btn-lg {
     font-family: Roboto;
     font-size: 1.50rem;
 }
-/*knopjes*/
+/*buttons eind*/
 
 
 /*test*/
@@ -398,7 +476,7 @@ btn btn-primary btn-round-lg btn-lg {
     letter-spacing: 0;
     color: #222222;
     line-height: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     padding-bottom: 16px;
     position: relative;
 }
